<resources>
    <string name="app_name">ONGAndroid</string>

    <!-- Fragments Titles    -->
    <string name="title_home">Home</string>
    <string name="title_us">Nosotros</string>
    <string name="title_news">Novedades</string>
    <string name="title_contact">Contacto</string>
    <string name="title_activities">Actividades</string>

    <!-- Testimonials List -->
    <!-- Title -->
    <string name="testimonios">Testimonios</string>
    <!-- Tools for preview -->
    <string name="nombre_y_ap">Nombre y Apellido </string>
    <string name="testimoniot">Testimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoni</string>

    <!-- Activities Fragment -->
    <!-- Button -->
    <string name="button_join">¡Quiero ser parte!</string>
    <!-- Tools for preview -->
    <string name="preview_tool_activity_name">Nombre de la actividad </string>
    <string name="preview_tool_activity_description">Descripcion de la actividad, aquí escrobo una descripción de la actividad, que tenga palabras de diferentes longitudes, para poder ver bien como queda el texto en pantalla.</string>

    <string name="contactInvitation">¡Contactate con nosotros!</string>
    <string name="nosotrosFragmentTitle">¡Nosotros!</string>


    <string name="nameNews">Nombre de la novedad</string>
    <string name="description">Descripcion de la novedad</string>

    <string name="detalle">Detalle</string>
    <string name="loading">Loading..</string>

    <!-- Login Activity   -->
    <!-- Title -->
    <string name="ong_name">SOMOS MAS</string>
    <!-- Hints -->
    <string name="hint_name">Nombre y Apellido</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_repeat_password">Repite la contraseña</string>
    <!-- Button -->
    <string name="button_register">Registrarme</string>
    <string name="button_login">Login</string>
    <string name="text_have_account">Ya tienes cuenta? Ingresá!</string>
    <string name="text_dont_have_account">No tienes cuenta? Registrate!</string>
    <!-- Requirements -->
    <string name="obligatory_field">*Campo obligatorio</string>
    <string name="error_message_getting_data">Ha ocurrido un error obteniendo la información</string>
    <string name="Error_message">Ha ocurrido un error. Intente nuevamente mas tarde</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_surname">Nombre y Apellido</string>
    <string name="register">Registrarme</string>
    <string name="email">Email</string>
    <string name="passwordS">Contraseña</string>
    <string name="repeat_password">Repetir Contraseña</string>
    <string name="Signup">Ya tienes cuenta ? Ingresa!</string>

    <!-- Dialog messages -->
    <string name="register_successfully">User was successfully register</string>
    <string name="dialog_acept">Aceptar</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>

    <string name="facebook_app_id">617773526560520</string>
    <string name="fb_login_protocol_scheme">fb617773526560520</string>
    <string name="facebook_client_token">bd0dbab6d26d0c7e32a0d35b8b8230d8</string>
    <string name="content_description_ong_logo">ONGLog</string>
    <string name="content_description_novedades">imagen novedades</string>

</resources>