<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/vertical_margin_small"
    app:cardCornerRadius="@dimen/corner_card_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iVNovedades"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_height_vertical_recycler"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvNameNews"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/content_description_novedades"/>

        <TextView
            android:id="@+id/tvNameNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_values"
            android:paddingTop="@dimen/padding_values"
            tools:text="@string/nameNews"
            style="@style/text_style_activity_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iVNovedades" />

        <TextView
            android:id="@+id/tvDescriptionNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_values"
            android:paddingBottom="@dimen/padding_values"
            style="@style/text_style_activity_description"
            tools:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameNews" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>