<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.LoginFragment"
    android:background="@color/light_grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_values">

        <!-- Ong Layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_ong_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/layout_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Logo Image View -->
            <ImageView
                android:id="@+id/image_logo_login"
                android:layout_width="@dimen/big_logo_width"
                android:layout_height="@dimen/big_logo_height"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@+id/text_ong_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/ong_name" />

            <!-- Title Text View -->
            <TextView
                android:id="@+id/text_ong_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/ong_name"
                android:textAppearance="@style/text_style_ong_name"
                android:layout_marginTop="-16dp"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_logo_login"
                tools:text="@string/ong_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Login Layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_login"
            android:layout_width="0dp"
            android:layout_height="340dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- Email Text Input Layout -->
            <!-- Change style to "@style/InputTextLayoutStyle.App.LoginError" -->
            <!-- when have an input error -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_text_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_margin_small"
                android:hint="@string/hint_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/InputTextLayoutStyle.App.Login">

                <!-- Email Input Edit Text -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_text_email"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/text_style_login_input" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Text Input Layout -->
            <!-- Change style to "@style/InputTextLayoutStyle.App.LoginError" -->
            <!-- when have an input error -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_text_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_margin_small"
                android:hint="@string/hint_password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_text_layout_email"
                style="@style/InputTextLayoutStyle.App.Login">

                <!-- Password Input Edit Text -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/text_style_login_input" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Login Button -->

            <!-- Account Text View -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_values"
                android:background="@drawable/selector_btn_enabled_property"
                android:enabled="false"
                android:padding="@dimen/margin_values"
                android:text="@string/button_login"
                android:textAlignment="center"
                android:textAppearance="@style/text_style_red_button"
                app:layout_constraintTop_toBottomOf="@id/input_text_layout_password" />

            <android.widget.Button
                android:id="@+id/button_google"
                android:layout_width="170dp"
                android:layout_height="58dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/shape_btn_google"
                android:drawableStart="@drawable/ic_google2"
                android:paddingHorizontal="39dp"
                android:text="@string/google"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login" />

            <android.widget.Button
                android:id="@+id/button_facebook"
                android:layout_width="170dp"
                android:layout_height="58dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/shape_btn_facebook"
                android:drawableStart="@drawable/ic_facebook"
                android:paddingHorizontal="31dp"
                android:text="@string/facebook"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/text_dont_have_account"
                android:textAlignment="center"
                android:textAppearance="@style/text_style_account"
                app:layout_constraintTop_toBottomOf="@id/button_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>